2000-02-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (ExecuteFunction):
	fixed memory leak in function code (hopefully)

	* fvwm/style.c (merge_style_list):
	fixed memory leak when merging the style list

2000-01-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (merge_styles):
	* fvwm/update.c (apply_window_updates):
	* fvwm/add_window.c (setup_style_and_decor):
	* fvwm/builtins.c (setShadeAnim):
	fixed 'WindowShadeSteps' style

	* fvwm/style.c (ProcessNewStyle):
	(check_window_style_change):
	* fvwm/style.h:
	* fvwm/window_flags.h:
	* fvwm/fvwm.h:
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/placement.c (PlaceWindow):
	* fvwm/session.c (SaveGlobalState):
	(LoadGlobalState):
	* fvwm/borders.c (RedrawTitle):
	* fvwm/add_window.c (setup_focus_policy):
	(regrab_focus_win):
	* fvwm/events.c (HandleButtonPress):
	* fvwm/builtins.c (SetGlobalOptions):
	removed GlobalOpts and WIndowShadeAnimate commands in favour of styles

	* fvwm/add_window.c (AddWindow):
	fixed placement to honouring the layer

	* fvwm/add_window.c (GetWindowSizeHints):
	* fvwm/fvwm.h (struct):
	* fvwm/events.c (HandlePropertyNotify):
	a hack to workaround buggy apps that map their window and then change
	the width_inc/height_inc hints before the window is mapped and expect
	that the window doesn't change its size.

2000-01-31  Brad Giaccio  <bgiaccio@psrw.com>

	* fvwm/placement.c (PlaceWindow): fixed UMR on final_g width and height

	* fvwm/move_resize.c (move_window_doit): fixed UMR on FinalX and FinalY

2000-01-31  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	fixed 'GrabFocus' style for transients of the root window

	* fvwm/icons.c (Iconify):
	set is_icon_entered flag to false when a window is iconified to make
	sure the flag is ok

	* fvwm/menus.c (GetMenuOptions):
	safety fix to prevent core dump with 'this'

	* fvwm/functions.c (expand):
	fixed quoting of $n/$r/$c with embedded single quotes

	* fvwm/move_resize.c (InteractiveMove):