@@ -1,5 +1,8 @@
 2000-02-02  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/borders.c (RedrawBorder):
+	fixed noinset fvwm borders
+
 	* fvwm/functions.c (ExecuteFunction):
 	fixed memory leak in function code (hopefully)
 
